--- a/financial-advisor-backend/src/main/resources/application.yml
+++ b/financial-advisor-backend/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   application:
     name: financial-advisor-backend
 
-#  profiles:
-#    active: ${SPRING_PROFILES_ACTIVE:local}
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}
 
   datasource:
     url: ${DATABASE_URL}
