--- a/financial-advisor-backend/src/main/resources/application.yml
+++ b/financial-advisor-backend/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 app:
-  frontend-url: http://localhost:3000
+  frontend-url: https://financial-advisor-beta.vercel.app
 spring:
   application:
     name: financial-advisor-backend
@@ -36,7 +36,7 @@ spring:
               - https://www.googleapis.com/auth/gmail.send
               - https://www.googleapis.com/auth/calendar
               - https://www.googleapis.com/auth/calendar.events
-            redirect-uri: "http://localhost:8085/login/oauth2/code/google"
+            redirect-uri: "https://ai-financial-agent.onrender.com/login/oauth2/code/google"
             authorization-grant-type: authorization_code
         provider:
           google:
