--- a/financial-advisor-backend/src/main/resources/application.yml
+++ b/financial-advisor-backend/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 app:
-  frontend-url: https://financial-advisor-beta.vercel.app
+  frontend-url: ${FRONTEND_URL}
 spring:
   application:
     name: financial-advisor-backend
